Creato il Banner hero con le scrritte ancora da specificare aggiunto il logo del favicon e fatto in modo che si può salvare sul home di apple

--- a/index.html
+++ b/index.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/assets/logo/Andreas-white-low-res .png"
+    />
+    <link
+      rel="shortcut icon"
+      href="assets/logo/Andreas-white-low-res .png"
+      type="image/x-icon"
+    />
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="shortcut icon"
-      href="assets/logo/logo-white-low.png"
-      type="image/x-icon"
-    />
+
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Andreas Unterholzner</title>
   </head>
@@ -30,10 +36,13 @@
     </nav>
     <main>
       <div class="container-hero">
-        <img src="assets/img/background-nav.jpg" alt="" />
-         
         <div class="foto-area"></div>
+        <div class="text-area">
+          <h1>Hi I'm Andreas</h1>
+          <h3>And I am a Web Developer</h3>
+          <button>Hire Me</button>
+        </div>
       </div>
     </main>
-</body>
+  </body>
 </html>
