--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link
-      rel="apple-touch-icon"
+    <link rel="apple-touch-icon"
       sizes="152x152"
-      href="/assets/logo/Andreas-white-low-res .png"
+      href="/assets/logo/Andreas-white-low-res.png"
     />
-    <link
-      rel="shortcut icon"
-      href="assets/logo/Andreas-white-low-res .png"
+    <link rel="shortcut icon"
+      href="/assets/logo/Andreas-white-low-res.png"
       type="image/x-icon"
     />
+    
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Personal Portfolio of Andreas Unterholzner">
+    <meta name="author" content="Andreas Unterholzner">
 
     <link rel="stylesheet" href="assets/css/style.css" />
     <title>Andreas Unterholzner</title>
@@ -39,7 +40,7 @@
         <div class="foto-area"></div>
         <div class="text-area">
           <h1>Hi I'm Andreas</h1>
-          <h3>And I am a Web Developer</h3>
+          <h3> I am a Web Developer Student</h3>
           <button>Hire Me</button>
         </div>
       </div>
