--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="text-area">
           <h1>Hi I'm Andreas</h1>
           <h3> I am a Web Developer Student</h3>
-          <button>Hire Me</button>
+          <button>Contact</button>
         </div>
       </div>
     </main>
