--- a/index.html
+++ b/index.html
@@ -40,9 +40,12 @@
         <div class="foto-area"></div>
         <div class="text-area">
           <h1>Hi I'm Andreas</h1>
-          <h3> I am a Web Developer Student</h3>
+          <h3> I am a  Full Stack Web Developer Student</h3>
           <button>Hire Me</button>
         </div>
+      </div>
+      <div class="container-main">
+
       </div>
     </main>
   </body>
