Fatto il media Query tranne quello del telefono che è in lavorazione

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta name="author" content="Andreas Unterholzner">
 
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Andreas Unterholzner</title>
+    <title>Andreas Unterholzner | Home </title>
   </head>
   <body>
     <nav>
@@ -41,7 +41,8 @@
         <div class="text-area">
           <h1>Hi I'm Andreas</h1>
           <h3> I am a  Full Stack Web Developer Student</h3>
-          <button>Hire Me</button>
+            <a href="#" class="btn1">hire me <span>&#10132;</span></a>
+            </span></a>
         </div>
       </div>
       <div class="container-main">
