Credo di aver risolto in modo per fare che la scheda contatti funzioni

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a class="active" href="#/index.html">Home</a></li>
           <li><a href="/assets/pages/about/about.html">Chi sono</a></li>
           <li><a href="#"> Progetti</a></li>
-          <li><a class="btn" href="/assets/pages/contact/conatct.html">contatti</a></li>
+          <li><a class="btn" href="#/assets/pages/contact/conatct.html">contatti</a></li>
         </ul>
       </div>
     </nav>
