--- a/assets/pages/contact/conatct.html
+++ b/assets/pages/contact/conatct.html
@@ -80,6 +80,7 @@
              <button type="submit"><i class="fa-solid fa-paper-plane"></i> Invia</button>
             </div>
             <input type="hidden" name="_next" value="https://andidev96.github.io">
+            <input type="hidden" name="_captcha" value="false">
            
           </form>
           
